--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@arweave-wallet-kit-beta/core": "^0.0.1-beta.4",
     "@arweave-wallet-kit-beta/react": "^0.0.1-beta.10",
     "@arweave-wallet-kit/webwallet-strategy": "^0.0.1-beta.4",
-    "@permaweb/aoconnect": "^0.0.45",
+    "@permaweb/aoconnect": "^0.0.48",
     "antd": "^5.15.0",
+    "ardb": "^1.1.10",
+    "arweave": "^1.14.4",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
